// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/github-releases getReleases returns releases 1`] = `
Object {
  "releases": Array [
    Object {
      "files": Array [],
      "gitRef": "1.0.0",
      "releaseTimestamp": "2020-03-09T11:00:00Z",
      "version": "1.0.0",
    },
    Object {
      "files": Array [],
      "gitRef": "v1.1.0",
      "releaseTimestamp": "2020-03-09T10:00:00Z",
      "version": "v1.1.0",
    },
    Object {
      "files": Array [],
      "gitRef": "2.0.0",
      "isStable": false,
      "releaseTimestamp": "2020-04-09T10:00:00Z",
      "version": "2.0.0",
    },
    Object {
      "files": Array [
        Object {
          "name": "file-1",
          "url": "https://gitstorage.com/some/dep/releases/download/3.0.0/file-1",
        },
        Object {
          "name": "file-2",
          "url": "https://gitstorage.com/some/dep/releases/download/3.0.0/file-2",
        },
      ],
      "gitRef": "3.0.0",
      "releaseTimestamp": "2020-12-09T10:00:00Z",
      "version": "3.0.0",
    },
  ],
  "sourceUrl": "https://github.com/some/dep",
}
`;

exports[`datasource/github-releases getReleases returns releases 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token some-token",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/some/dep/releases?per_page=100",
  },
]
`;

exports[`datasource/github-releases getReleases supports ghe 1`] = `
Object {
  "releases": Array [
    Object {
      "files": Array [],
      "gitRef": "a",
      "isStable": undefined,
      "releaseTimestamp": "2020-03-09T13:00:00Z",
      "version": "a",
    },
    Object {
      "files": Array [],
      "gitRef": "v",
      "isStable": undefined,
      "releaseTimestamp": "2020-03-09T12:00:00Z",
      "version": "v",
    },
    Object {
      "files": Array [],
      "gitRef": "1.0.0",
      "isStable": undefined,
      "releaseTimestamp": "2020-03-09T11:00:00Z",
      "version": "1.0.0",
    },
    Object {
      "files": Array [],
      "gitRef": "v1.1.0",
      "isStable": undefined,
      "releaseTimestamp": "2020-03-09T10:00:00Z",
      "version": "v1.1.0",
    },
    Object {
      "files": Array [],
      "gitRef": "2.0.0",
      "isStable": false,
      "releaseTimestamp": "2020-04-09T10:00:00Z",
      "version": "2.0.0",
    },
    Object {
      "files": Array [
        Object {
          "name": "file-1",
          "url": "https://gitstorage.com/some/dep/releases/download/3.0.0/file-1",
        },
        Object {
          "name": "file-2",
          "url": "https://gitstorage.com/some/dep/releases/download/3.0.0/file-2",
        },
      ],
      "gitRef": "3.0.0",
      "isStable": undefined,
      "releaseTimestamp": "2020-12-09T10:00:00Z",
      "version": "3.0.0",
    },
  ],
  "sourceUrl": "https://git.enterprise.com/some/dep",
}
`;

exports[`datasource/github-releases getReleases supports ghe 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate",
      "authorization": "token some-token",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/api/v3/repos/some/dep/releases?per_page=100",
  },
]
`;
